--- a/tex/2021/3/8.tex
+++ b/tex/2021/3/8.tex
@@ -1,2 +1,139 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item We show this by induction on \(n\).
+
+          We first consider the base case where \(n = 1\). Notice \(\LHS = x_1 = a\), and
+          \[
+              \RHS = 2 + 4^{1 - 1} (a - 2) = 2 + (a - 2) = a.
+          \]
+
+          Hence, \(\LHS \geq \RHS\) is true.
+
+          Now, assume that the original statement
+          \[
+              x_n \geq 2 + 4^{n - 1} (a - 2)
+          \]
+          is true for some \(n = k\).
+
+          Consider the case where \(n = k + 1\). We first notice that since \(a > 2\), we must have
+          \[
+              x_n \geq 2 + 4^{n - 1} (a - 2) > 0.
+          \]
+
+          Hence, we have
+          \begin{align*}
+              \LHS & = x_{k + 1}                                              \\
+                   & = x_{k}^2 - 2                                            \\
+                   & \geq \left(2 + 4^{k - 1} (a - 2)\right)^2 - 2            \\
+                   & = 4 + 4^{2k - 2}(a - 2)^2 + 4 \cdot 4^{k - 1}(a - 2) - 2 \\
+                   & = 2 + 4^{k} (a - 2) + 4^{2k - 2} (a - 2)^2               \\
+                   & > 2 + 4^{(k + 1) - 1}(a - 2)                             \\
+                   & = \RHS,
+          \end{align*}
+          and this shows that the original statement is true for the case \(n = k + 1\) as well.
+
+          Hence, the original statement is true for the base case \(n = 1\), and given it holds for \(n = k\), it holds for \(n = k + 1\). By the principle of mathematical induction, it must hold for all integers \(n \geq 1\) given \(a > 2\), as desired.
+
+    \item \begin{itemize}
+              \item \textbf{If direction.} We are given that \(\abs*{a} > 2\). If \(a < 0\), we must have \(a < -2\), but notice that for \(x_1 = a\), \(x_2 = a^2 - 2\), and for \(x_1 = -a\), \(x_2 = (-a)^2 - 2 = a^2 - 2\). Hence, if the first term only differs by a plus/minus sign, all the terms including and after the second term will behave identically. This means we only have to consider the case \(a > 2\), and since
+                    \[
+                        x_n \geq 2 + 4^{n - 1}(a - 2),
+                    \]
+                    and the right-hand side diverges to \(\infty\) as \(n \to \infty\), we can conclude that
+                    \[
+                        \lim_{n \to \infty} x_n = \infty,
+                    \]
+                    as desired.
+
+              \item \textbf{Only-if direction.} We attempt to prove the contrapositive of the only-if direction, i.e. given that \(\abs*{a} \leq 2\), we want to show that \(x_n\) does not diverge to \(\infty\).
+
+                    We would like to show that \(\abs*{x_n} \leq 2\) for all \(n \in \NN\).
+
+                    The base case where \(n = 1\) is true, since \(0 \leq a \leq 2\).
+
+                    Now, assume that this is true for some \(n = k\), i.e.
+                    \[
+                        \abs*{x_n} \leq 2 \iff -2 \leq x_n \leq 2 \iff 0 \leq x_n^2 \leq 4.
+                    \]
+
+                    For \(n = k + 1\),
+                    \[
+                        x_n = x_{k + 1} = x_k^2 - 2,
+                    \]
+                    and hence
+                    \[
+                        -2 \leq x_{k + 1} \leq 2 \iff \abs*{x_{k + 1}} \leq 2.
+                    \]
+
+                    So this statement is true for the base case where \(n = 1\), and given it holds for some \(n = k\) it holds for the case \(n = k + 1\). Hence, by the principle of mathematical induction, this statement is true for all \(n \in \NN\).
+
+                    This means that \(x_n\) is bounded above and below, and hence it cannot diverge to infinity. This proves the contrapositive of the only-if direction, and hence the only-if direction is true.
+          \end{itemize}
+
+          In conclusion, we have shown that \(x_n \to \infty\) as \(n \to \infty\) if and only if \(\abs*{a} > 2\).
+
+    \item If this is true for all \(n \geq 1\), then this is true for \(n = 1\). On one hand,
+          \[
+              y_{1} = \frac{A x_1}{x_2} = \frac{A a}{a^2 - 2},
+          \]
+          and on the other hand
+          \[
+              y_{1} = \frac{\sqrt{x_2^2 - 4}}{x_2} = \frac{\sqrt{(a^2 - 2)^2 - 4}}{a^2 - 2} = \frac{\sqrt{a^4 - 4a^2}}{a^2 - 2} = \frac{a \sqrt{a^2 - 4}}{a^2 - 2}.
+          \]
+
+          Hence, we must have
+          \begin{align*}
+              A   & = \sqrt{a^2 - 4}  \\
+              A^2 & = a^2 - 4         \\
+              a^2 & = A^2 + 4         \\
+              a   & = \sqrt{A^2 + 4},
+          \end{align*}
+          since \(a > 2\).
+
+          We still have to show that this \(a\) gives the desired relation for every \(n \geq 1\).
+
+          Notice that by definition,
+          \begin{align*}
+              y_{n + 1} & = \frac{A \prod_{i = 1}^{n + 1} x_i}{x_{n + 2}}                             \\
+                        & = \frac{A \prod_{i = 1}^{n}}{x_{n + 1}} \cdot \frac{x_{n + 1}^2}{x_{n + 2}} \\
+                        & = y_{n} \cdot \frac{x_{n + 1}^2}{x_{n + 2}}.
+          \end{align*}
+
+          We aim to show this by induction on \(n\). The base case where \(n = 1\) is shown above.
+
+          Now, assume that
+          \[
+              y_n = \frac{\sqrt{x_{n + 1}^2 - 4}}{x_{n + 1}}
+          \]
+          for a certain value of \(n = k\).
+
+          For \(n = k + 1\),
+          \begin{align*}
+              y_n & = y_{k + 1}                                                                   \\
+                  & = y_k \cdot \frac{x_{n + 1}^2}{x_{n + 2}}                                     \\
+                  & = frac{\sqrt{x_{n + 1}^2 - 4}}{x_{n + 1}} \cdot \frac{x_{n + 1}^2}{x_{n + 2}} \\
+                  & = \frac{\sqrt{x_{n + 1}^2 - 4} x_{n + 1}}{x_{n + 2}}                          \\
+                  & = \frac{\sqrt{x_{n + 1}^4 - 4 x_{n + 1}^2}}{x_{n + 2}}                        \\
+                  & = \frac{\sqrt{\left(x_{n + 1}^2 - 2\right)^2 - 4}}{x_{n + 2}}                 \\
+                  & = \frac{\sqrt{x_{n + 2}^2 - 4}}{x_{n + 2}},
+          \end{align*}
+          which is precisely the original statement for \(n = k + 1\).
+
+          By the principle of mathematical induction, for \(a = \sqrt{A^2 + 4}\), we have shown that this desired statement holds for the base case \(n = 1\), and given that it holds for some \(n = k\), we can show it holds for \(n = k + 1\). Hence, by the principle of mathematical induction, we have that
+          \[
+              y_n = \frac{\sqrt{x_{n + 1}^2 - 4}}{x_{n + 1}}
+          \]
+          for every value of \(n \geq 1\) for this certain value of \(a = \sqrt{A^2 + 4}\).
+
+          Hence, for the value \(a = \sqrt{A^2 + 4}\), we have the statement holds for all \(n \geq 1\). We have also shown that if the statement holds for all \(n \geq 1\), it must be the case that \(a = \sqrt{A^2 + 4}\). Hence, for precisely this value of \(a = \sqrt{A^2 + 4}\), we have
+          \[
+              y_n = \frac{\sqrt{x_{n + 1}^2 + 4}}{x_{n + 1}}.
+          \]
+
+          For this value of \(a > 2\), we have \(x_n \to \infty\) as \(n \to \infty\). Hence,
+          \[
+              y_n = \frac{\sqrt{x_{n + 1}^2 + 4}}{x_{n + 1}} = \sqrt{1 + \frac{4}{x_{n + 1}^2}}
+          \]
+          converges to \(1\) as \(n \to \infty\).
+\end{enumerate}
