--- a/tex/2021/3/5.tex
+++ b/tex/2021/3/5.tex
@@ -1,2 +1,105 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item When the curves meet, the \(r\) values and the \(\theta\) values must be both equal, and hence
+          \begin{align*}
+              a + 2 \cos \theta                       & = 2 + \cos 2\theta        \\
+              a + 2 \cos \theta                       & = 2 + 2 \cos^2 \theta - 1 \\
+              2 \cos^2 \theta - 2 \cos \theta + 1 - a & = 0,
+          \end{align*}
+          as desired.
+
+          By differentiating with respect to theta, for the two curves to touch, we must have
+          \begin{align*}
+              \DiffOp{\theta} (a + 2 \cos \theta) & = \DiffOp{\theta} (2 + \cos 2 \theta) \\
+              - 2 \sin \theta                     & = - 2 \sin 2 \theta                   \\
+              \sin \theta                         & = \sin 2 \theta                       \\
+              \sin \theta                         & = 2 \sin \theta \cos \theta           \\
+              \sin \theta (2 \cos \theta - 1)     & = 0.
+          \end{align*}
+
+          This means, either for the value of \(\sin \theta = 0\) it satisfies the first equation, or for the value of \(2 \cos \theta - 1 = 0\) it satisfies the first equation.
+
+          For the first case, we must have \(\cos \theta = \pm 1\), and hence
+          \begin{align*}
+              a & = 2 \cos^2 \theta - 2 \cos \theta + 1 \\
+                & = 2 (\pm 1)^2 - 2 (\pm 1) + 1         \\
+                & = 3 \pm 2,
+          \end{align*}
+          and so \(a = 1\) or \(a = 5\).
+
+          For the second case, we have \(\cos \theta = \frac{1}{2}\), and hence
+          \begin{align*}
+              a & = 2 \cos^2 \theta - 2 \cos \theta + 1                            \\
+                & = 2 \left(\frac{1}{2}\right)^2  - 2 \left(\frac{1}{2}\right) + 1 \\
+                & = \frac{1}{2},
+          \end{align*}
+          as desired.
+
+    \item For the case where \(a = \frac{1}{2}\), the curves meet precisely for \(\cos \theta = \frac{1}{2}\) only, and hence \(\theta = \pm \frac{\pi}{3}\), which gives \(r = \frac{1}{2} + 1 = \frac{3}{2}\).
+
+          Both curves are symmetric about the initial line, since \(\cos\) is an even function.
+
+          When \(\theta = 0\), \(r_1 = a + 2 = \frac{5}{2}\), and \(r_2 = 2 + 1 = 3\).
+
+          For \(r_1\), since \(r \geq 0\), we must have
+          \begin{align*}
+              \frac{1}{2} + 2 \cos \theta & \geq 0              \\
+              \cos \theta                 & \geq - \frac{1}{4},
+          \end{align*}
+          which means it only exists for
+          \[
+              -\arccos \left(-\frac{1}{4}\right) \leq \theta \leq \arccos \left(-\frac{1}{4}\right).
+          \]
+
+          When \(\theta = \pm \frac{\pi}{2}\), \(r_1 = \frac{1}{2} + 2 \cos \pm \frac{\pi}{2} = \frac{1}{2}\).
+
+          For all values of \(\theta\), we must have \(r_2 \geq 0\). When \(\theta = \pi\), \(r_2 = 2 + 1 = 3\), and for \(\theta = \pm \frac{\pi}{2}\), \(r_1 = \frac{1}{2} + \cos \pm \frac{\pi}{2} = \frac{1}{2}\), \(r_2 = 2 + \cos \pm \pi = 1\).
+
+          Hence, the two curves are as follows. All coordinates are in \((r, \theta)\).
+          \begin{center}
+              \input{\currfiledir 5-diag1}
+          \end{center}
+
+    \item \begin{itemize}
+              \item \(a = 1\). For \(r_1\), since \(r \geq 0\), we must have
+                    \begin{align*}
+                        1 + 2 \cos \theta & \geq 0             \\
+                        \cos \theta       & \geq -\frac{1}{2},
+                    \end{align*}
+                    which means \(-\frac{2}{3} \pi \leq \theta \leq \frac{2}{3}\pi\).
+
+                    The two curves meet when
+                    \begin{align*}
+                        2 \cos^2 \theta - 2 \cos \theta & = 0  \\
+                        \cos \theta (\cos \theta - 1)   & = 0,
+                    \end{align*}
+                    which is when \(\cos \theta = 0\) or \(\cos \theta = 1\).
+
+                    For \(\cos \theta = 0\), this means \(\theta = \pm \frac{\pi}{2}\), and \(r = 1\). For this value of \(\theta\), the two curves cross.
+
+                    For \(\cos \theta = 1\), this means \(\theta = 0\), and \(r = 3\). For this value of \(\theta\), the two curves touch.
+
+                    \begin{center}
+                        \input{\currfiledir 5-diag2}
+                    \end{center}
+
+              \item \(a = 5\). For \(r_1\), \(r \geq 0\) for all \(\theta\).
+
+                    The two curves meet when
+                    \begin{align*}
+                        2 \cos^2 \theta - 2 \cos \theta     & = 4  \\
+                        \cos^2 \theta - \cos \theta - 2     & = 0  \\
+                        (\cos \theta - 2) (\cos \theta + 1) & = 0,
+                    \end{align*}
+                    which is when \(\cos \theta = -1\), since \(\cos \theta \neq 2\).
+
+                    For \(\cos \theta = -1\), this means \(\theta = \pi\), and \(r = 3\). For this value of \(\theta\), the two curves touch.
+
+                    When \(\theta = 0\), \(r_1 = 5 + 2 = 7\), and \(r_2 = 2 + 1 = 3\). When \(\theta = \pm \frac{1}{2}\pi\), \(r_1 = 5 + 2 \cos \pm \frac{1}{2}\pi = 5\), \(r_2 = 2 + \cos \pm \pi = 1\).
+
+                    \begin{center}
+                        \input{\currfiledir 5-diag3}
+                    \end{center}
+          \end{itemize}
+\end{enumerate}
