--- a/tex/progress.tex
+++ b/tex/progress.tex
@@ -107,7 +107,7 @@ Progress: Finished 2017, 2018 and 2024.
 
 \clearpage
 \section*{Paper III}
-Progress: Finished 2010 to 2021.
+Progress: Finished 2010 to 2021 and 2024.
 
 \begin{center}
     \begin{tabular}{c|cccccccccccccccc}
@@ -151,6 +151,6 @@ Progress: Finished 2010 to 2021.
         2021 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & \tick & \tick & N/A   & N/A & N/A & N/A \\
         2022 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
         2023 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
-        2024 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A
+        2024 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & \tick & \tick & N/A   & N/A & N/A & N/A
     \end{tabular}
 \end{center}
