--- a/tex/2024/3/1.tex
+++ b/tex/2024/3/1.tex
@@ -1,2 +1,98 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item For the first identity, notice that
+          \begin{align*}
+              \frac{1}{r + 1} - \frac{1}{r} + \frac{1}{r^2} & = \frac{r^2 - r(r + 1) + (r + 1)}{r^2 (r + 1)} \\
+                                                            & = \frac{r^2 - r^2 - r + r + 1}{r^2 (r + 1)}    \\
+                                                            & = \frac{1}{r^2 (r + 1)},
+          \end{align*}
+          and hence using this,
+          \begin{align*}
+              \sum_{r = 1}^{N} \frac{1}{r^2 (r + 1)} & = \sum_{r = 1}^{N} \left(\frac{1}{r + 1} - \frac{1}{r} + \frac{1}{r^2}\right)                      \\
+                                                     & = \sum_{r = 1}^{N} \frac{1}{r^2} + \sum_{r = 1}^{N} \frac{1}{r + 1} - \sum_{r = 1}^{N} \frac{1}{r} \\
+                                                     & = \sum_{r = 1}^{N} \frac{1}{r^2} + \sum_{r = 2}^{N + 1} \frac{1}{r} - \sum_{r = 1}^{N} \frac{1}{r} \\
+                                                     & = \sum_{r = 1}^{N} \frac{1}{r^2} - \frac{1}{1} + \frac{1}{N + 1}                                   \\
+                                                     & = \sum_{r = 1}^{N} \frac{1}{r^2} - 1 + \frac{1}{N + 1}.
+          \end{align*}
+
+          Let \(N \to \infty\), and we have \(\frac{1}{N + 1} \to 0\), and hence
+          \[
+              \sum_{r = 1}^{\infty} \frac{1}{r^2 (r + 1)} = \sum_{r = 1}^{\infty} \frac{1}{r^2} - 1 = \frac{\pi^2}{6} - 1.
+          \]
+
+    \item By partial fractions, let
+          \[
+              \frac{1}{r^2 (r + 1) (r + 2)} = \frac{Ar + B}{r^2} + \frac{C}{r + 1} + \frac{D}{r + 2}
+          \]
+          for real constants \(A, B, C\) and \(D\).
+
+          Hence,
+          \[
+              (Ar + B) (r + 1) (r + 2) + C r^2 (r + 2) + D r^2 (r + 1) = 1.
+          \]
+
+          Let \(r = -2\), we have \(D \cdot (-2)^2 \cdot (-1) = -4D = 1\), and hence \(D = - \frac{1}{4}\).
+
+          Let \(r = -1\), we have \(C \cdot (-1)^2 \cdot 1 = C = 1\), and hence \(C = 1\).
+
+          Let \(r = 0\), we have \(B \cdot 1 \cdot 2 = 1\), and hence \(B = \frac{1}{2}\).
+
+          Considering the coefficient of \(r^3\), we have \(A + C + D = 0\), and hence \(A = - \frac{3}{4}\).
+
+          Hence,
+          \[
+              \frac{1}{r^2 (r + 1) (r + 2)} = - \frac{3}{4} \cdot \frac{1}{r} + \frac{1}{2} \cdot \frac{1}{r^2} + \frac{1}{r + 1} - \frac{1}{4} \cdot \frac{1}{r + 2}.
+          \]
+
+          Therefore,
+          \begin{align*}
+              \sum_{r = 1}^{N} \frac{1}{r^2 (r + 1) (r + 2)} & = - \frac{3}{4} \sum_{r = 1}^{N} \frac{1}{r} + \frac{1}{2} \sum_{r = 1}^{N} \frac{1}{r^2} + \sum_{r = 1}^{N} \frac{1}{r + 1} - \frac{1}{4} \sum_{r = 1}^{N} \frac{1}{r + 2}        \\
+                                                             & = \frac{1}{2} S_{N} - \frac{3}{4} \cdot \sum_{r = 1}^{N} \frac{1}{r} + \sum_{r = 2}^{N + 1} \frac{1}{r} - \frac{1}{4} \sum_{r = 3}^{N + 2} \frac{1}{r}                             \\
+                                                             & = \frac{1}{2} S_{N} - \frac{3}{4} \sum_{r = 3}^{N} \frac{1}{r} + \sum_{r = 3}^{N} \frac{1}{r} - \frac{1}{4} \sum_{r = 3}^{N} \frac{1}{r}                                           \\
+                                                             & = \frac{1}{2} S_{N} - \frac{3}{4} \left(\frac{1}{1} + \frac{1}{2}\right) + \left(\frac{1}{2} + \frac{1}{N + 1}\right) - \frac{1}{4} \left(\frac{1}{N + 1} + \frac{1}{N + 2}\right) \\
+                                                             & = \frac{1}{2} S_{N} - \frac{9}{8} + \frac{4}{8} + \frac{3}{4} \cdot \frac{1}{N + 1} - \frac{1}{4} \cdot \frac{1}{N + 2}                                                            \\
+                                                             & = \frac{1}{2} S_{N} - \frac{5}{8} + \frac{3}{4} \cdot \frac{1}{N + 1} - \frac{1}{4} \cdot \frac{1}{N + 2}.
+          \end{align*}
+
+          Let \(N \to \infty\), we have \(\frac{1}{N + 1}, \frac{1}{N + 2} \to 0\), and hence
+          \[
+              \sum_{r = 1}^{\infty} \frac{1}{r^2 (r + 1) (r + 2)} = \frac{1}{2} \lim_{N \to \infty} S_{N} - \frac{5}{8} = \frac{\pi^2}{12} - \frac{5}{8}.
+          \]
+
+    \item Similarly, let
+          \[
+              \frac{1}{r^2 (r + 1)^2} = \frac{A}{r^2} + \frac{B}{r} + \frac{C}{(r + 1)^2} + \frac{D}{r + 1}
+          \]
+          for some real constants \(A, B, C\) and \(D\).
+
+          Hence,
+          \[
+              1 = A (r + 1)^2 + B r (r + 1)^2 + C r^2 + D r^2 (r + 1).
+          \]
+
+          Let \(r = 0\), and we have \(A = 1\). Let \(r = -1\), and we have \(C = 1\). Considering the coefficient of \(r^3\) we have \(B + D = 0\), and for \(r\), \(2A + B = 0\).
+
+          Hence, \(B = -2, D = 2\), and
+          \[
+              \frac{1}{r^2 (r + 1)^2} = \frac{1}{r^2} - \frac{2}{r} + \frac{1}{(r + 1)^2} + \frac{2}{r + 1}.
+          \]
+
+          Therefore, for natural numbers \(N\), we have
+          \begin{align*}
+              \sum_{r = 1}^{N} \frac{1}{r^2 (r + 1)^2} & = \sum_{r = 1}^{N} \frac{1}{r^2} + \sum_{r = 1}^{N} \frac{1}{(r + 1)^2} + 2 \sum_{r = 1}^{N} \frac{1}{r + 1} - 2 \sum_{r = 1}^{N} \frac{1}{r} \\
+                                                       & = S_N + \sum_{r = 1}^{N + 1} \frac{1}{r^2} + 2 \sum_{r = 2}^{N + 1} \frac{1}{r} - 2 \sum_{r = 1}^{N} \frac{1}{r}                              \\
+                                                       & = S_{N} + S_{N + 1} - \frac{1}{1^2} + 2 \cdot \frac{1}{N + 1} - 2 \cdot 1                                                                     \\
+                                                       & = S_{N} + s_{N + 1} + 2 \cdot \frac{1}{N + 1} - 3.
+          \end{align*}
+
+          Let \(N \to \infty\). \(S_{N}, S_{N + 1} \to \frac{\pi^2}{6}\), and \(\frac{1}{N + 1} \to 0\). Hence,
+          \begin{align*}
+              \sum_{r = 1}^{\infty} \frac{1}{r^2 (r + 1)^2} & = 2 \cdot \frac{\pi^2}{6} - 3                       \\
+                                                            & = \frac{\pi^2}{3} - 3                               \\
+                                                            & = 2 \cdot \left(\frac{\pi^2}{6} - 1\right) - 1      \\
+                                                            & = 2 \sum_{r = 1}^{\infty} \frac{1}{r^2 (r + 1)} - 1 \\
+                                                            & = \sum_{r = 1}^{\infty} \frac{2}{r^2 (r + 1)} - 1,
+          \end{align*}
+          as desired.
+\end{enumerate}
